-- ToDo [Code Comment] -- adding flickr gallary photos -- flicker movies paging adapter

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="movies_label">movies</string>
     <string name="movie_details_label">Movie Details</string>
+    <string name="search_image_result">Searched Image Result</string>
 </resources>
