-- Add 2 senarios for searching -- Add sectioned lib -- add searchview

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="movie_details_label">Movie Details</string>
     <string name="search_image_result">Searched Image Result</string>
     <string name="movies_title_toolbar">Movies</string>
+    <string name="queryHint">Looking for spacifc movie</string>
 </resources>
